--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -1,34 +1,23 @@
 //Footer Section styles
-
 @import "../utilities/mixins";
 
 footer {
   background-color: #f3efff;
   height: 60vh;
-  width: 100%;
 
   .footer {
     flex-direction: column;
-    margin: 2rem;
     justify-content: center;
     align-items: center;
     height: 100%;
 
     h1 {
       @include font($SF-Pro-Boldfont, 500, 20px, 30px);
-      width: 78%;
+      text-align: center;
       letter-spacing: -1px;
 
       @media screen and (min-width: 450px) {
-        width: 43%;
-      }
-
-      @media only screen and (min-width: 780px) {
-        width: 487px;
-      }
-
-      @media screen and (min-width: 1024px) {
-        width: 603px;
+        text-align: left;
       }
     }
 
@@ -61,6 +50,7 @@ footer {
 @media screen and (min-width: 1024px) {
   footer {
     height: 261px;
+    margin-top: 6rem;
 
     .footer {
       margin-left: 6rem;
