--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,6 @@
 footer {
   background-color: #f3efff;
   height: 60vh;
-  width: 100%;
 }
 
 footer .footer {
@@ -30,7 +29,6 @@ footer .footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 2rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -45,25 +43,13 @@ footer .footer h1 {
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
-  width: 78%;
+  text-align: center;
   letter-spacing: -1px;
 }
 
 @media screen and (min-width: 450px) {
   footer .footer h1 {
-    width: 43%;
-  }
-}
-
-@media only screen and (min-width: 780px) {
-  footer .footer h1 {
-    width: 487px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  footer .footer h1 {
-    width: 603px;
+    text-align: left;
   }
 }
 
@@ -100,6 +86,7 @@ footer .footer .main-buttons {
 @media screen and (min-width: 1024px) {
   footer {
     height: 261px;
+    margin-top: 6rem;
   }
   footer .footer {
     margin-left: 6rem;
@@ -119,14 +106,24 @@ footer .footer .main-buttons {
   }
 }
 
+.navbar-light .navbar-toggler {
+  float: right;
+}
+
 .navbar-light .navbar-nav .nav-link {
   color: #00000a;
   font-size: 14px;
 }
 
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #000;
+  font-weight: 500;
+}
+
 .navbar-collapse {
-  left: -3rem;
+  left: 0rem;
   padding: 14px;
+  margin-top: 2.3rem;
   width: 100vw;
   position: absolute;
   background-color: rgba(226, 227, 225, 0.92);
@@ -137,7 +134,10 @@ footer .footer .main-buttons {
   .navbar-collapse {
     left: 0rem;
     padding: 0px;
-    width: 0;
+    width: 100%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     position: relative;
     background-color: initial;
     z-index: 0;
@@ -147,32 +147,39 @@ footer .footer .main-buttons {
 .nav-bar {
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "applogo menu" "buttons buttons";
+  -ms-grid-columns: 157px 1fr;
+      grid-template-columns: 157px 1fr;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .nav-bar .logo {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: applogo;
   width: 45%;
 }
 
-.nav-bar nav {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  grid-area: menu;
+@media screen and (min-width: 450px) {
+  .nav-bar .logo {
+    width: 60%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .nav-bar .logo {
+    margin-top: 2rem;
+    width: 65%;
+  }
 }
 
 .nav-bar .nav-buttons {
-  grid-area: "buttons";
   position: relative;
   -webkit-box-orient: vertical;
   -webkit-box-direction: reverse;
       -ms-flex-direction: column-reverse;
           flex-direction: column-reverse;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   place-items: left;
   padding-top: 2rem;
 }
@@ -200,28 +207,7 @@ footer .footer .main-buttons {
   content: " →";
 }
 
-@media screen and (min-width: 450px) {
-  .nav-bar .logo {
-    width: 22%;
-  }
-}
-
 @media screen and (min-width: 1024px) {
-  .nav-bar {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 157px 1fr 1fr;
-        grid-template-columns: 157px 1fr 1fr;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .nav-bar .logo {
-    width: 65%;
-  }
   .nav-bar .nav-buttons {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -249,7 +235,6 @@ footer .footer .main-buttons {
   font-family: "IBM Plex Sans", sans-serif;
   z-index: 5;
   width: 95%;
-  height: 70vh;
   margin: 30px auto;
 }
 
@@ -261,9 +246,9 @@ footer .footer .main-buttons {
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 900px) and (max-width: 1024px) {
   .slider {
-    margin-left: 11rem;
+    margin-left: 8rem !important;
   }
 }
 
@@ -273,7 +258,7 @@ footer .footer .main-buttons {
     display: -ms-flexbox;
     display: flex;
     float: right;
-    margin-left: 19rem;
+    margin-left: 11rem;
     margin-top: 3rem;
     z-index: 0;
     height: 91vh;
@@ -375,7 +360,6 @@ footer .footer .main-buttons {
 }
 
 .content-tabs .selected-content .selected-description {
-  width: 88%;
   padding-top: -4rem;
   margin: 3rem;
 }
@@ -386,7 +370,6 @@ footer .footer .main-buttons {
   font-size: 18px;
   line-height: 26px;
   letter-spacing: -0.2px;
-  width: 182px;
 }
 
 .content-tabs .selected-content .selected-description .selected-subtitle {
@@ -396,7 +379,6 @@ footer .footer .main-buttons {
   line-height: 24px;
   color: #64648c;
   padding-top: 15px;
-  width: 225px;
 }
 
 .content-tabs .selected-content .selected-description .pricing-text {
@@ -417,7 +399,7 @@ footer .footer .main-buttons {
             flex-direction: row;
   }
   .content-tabs ul li {
-    width: 10%;
+    width: 15%;
   }
 }
 
@@ -436,7 +418,7 @@ footer .footer .main-buttons {
   .content-tabs ul li a {
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 13px;
     color: #191923;
     opacity: 0.55;
   }
@@ -460,15 +442,10 @@ footer .footer .main-buttons {
   }
   .content-tabs .selected-content .selected-image {
     margin-top: 3rem;
-    width: 536px;
   }
   .content-tabs .selected-content .selected-description {
-    width: 32%;
     padding-top: -4rem;
     margin: 0rem 3rem;
-  }
-  .content-tabs .selected-content .selected-description .selected-title {
-    width: 148px;
   }
   .content-tabs .selected-content .selected-description .pricing-text {
     font-family: "SF Pro Medium";
@@ -479,12 +456,15 @@ footer .footer .main-buttons {
   }
 }
 
+.carousel-inner {
+  padding: 3rem;
+}
+
 .carousel-inner h2 {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 500;
   font-size: 24px;
   line-height: 27px;
-  margin-left: 38px;
 }
 
 .carousel-inner h3 {
@@ -493,25 +473,16 @@ footer .footer .main-buttons {
   font-size: 15px;
   line-height: 22px;
   margin-top: 18px;
-  margin-left: 38px;
-  width: 188px;
 }
 
 .carousel-inner img {
-  width: 30%;
-  position: relative;
+  width: 80px;
   left: 63%;
-  padding-top: 2rem;
-}
-
-.carousel-inner h2,
-.carousel-inner span {
-  font-size: 20px;
 }
 
 .carousel-inner span {
   color: #8150c7;
-  display: block;
+  font-size: 24px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -550,6 +521,11 @@ a.active {
   color: #120ef0;
   border-bottom: 2px solid;
   opacity: 100%;
+  font-size: 12px;
+}
+
+a:hover {
+  cursor: pointer;
 }
 
 img {
@@ -575,6 +551,7 @@ img {
 .pricing-text {
   font-weight: 600;
   color: #120ef0;
+  font-size: 16px;
 }
 
 .pricing-text::after {
@@ -586,8 +563,9 @@ img {
           transform: rotateZ(-45deg) translateY(4px);
   background-position: center;
   background-repeat: no-repeat;
+  top: -2px;
+  position: relative;
   padding: 6px 8px;
-  margin-top: 4px;
 }
 
 .main-buttons {
@@ -601,11 +579,31 @@ img {
   color: #fff;
 }
 
+.main-buttons .btn-bgcolor::after {
+  background-image: url(../assets/icon/white-arrow.svg);
+}
+
+.main-buttons .btn-bgcolor:hover {
+  color: #fff;
+  width: 210px;
+  background: linear-gradient(36deg, #7536cc 0%, #a562e5 100%);
+}
+
 .main-buttons .btn-signup {
   margin-top: 19px;
   background-color: #fff;
   color: #000;
   border: 1px solid #000;
+}
+
+.main-buttons .btn-signup::after {
+  background-image: url(../assets/icon/black-arrow.svg);
+}
+
+.main-buttons .btn-signup:hover {
+  color: #000;
+  width: 210px;
+  background: linear-gradient(36deg, #ffffff 0%, #eaeaea 100%);
 }
 
 .main-buttons button {
@@ -617,27 +615,34 @@ img {
   border: none;
   width: 199px;
   height: 46px;
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
 }
 
 .main-buttons button::after {
   content: " ";
-  background-image: url(../assets/icon/white-arrow.svg);
   background-size: contain;
   background-repeat: no-repeat;
   position: relative;
   padding: 0px 6px;
-  top: 3px;
+  top: 5px;
   left: 8px;
 }
 
-.container-main {
-  width: 100%;
+.container-main main {
+  padding: 3.5rem;
 }
 
-.container-main .bg-image section {
-  position: relative;
-  margin: 3rem;
-  font-family: "Basis Grotesque";
+.container-main section {
+  padding: 2.5rem;
+}
+
+.container-main .bg-image .nav-bar {
+  margin: 2.5rem 2.5rem 0;
+}
+
+.container-main .bg-image .main {
+  width: 100%;
 }
 
 .container-main .bg-image .main h1,
@@ -649,12 +654,10 @@ img {
 .container-main .bg-image .main .sub-title {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 600;
-  font-size: 32px;
-  line-height: 44px;
+  font-size: 28px;
+  line-height: 40px;
   letter-spacing: -1px;
   text-align: left;
-  margin-top: 40px;
-  width: 249px;
 }
 
 .container-main .bg-image .main .title {
@@ -662,7 +665,6 @@ img {
 }
 
 .container-main .bg-image .main .sub-title {
-  margin-top: 0px;
   font-size: 28px;
 }
 
@@ -670,16 +672,16 @@ img {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 400;
   font-size: 1.3rem;
-  margin-top: 1.5rem;
-  width: 100%;
+}
+
+.container-main .leading-brands {
+  margin-top: 5rem;
 }
 
 .container-main .leading-brands h3 {
   font-family: "Basis Grotesque";
   font-weight: 400;
   font-size: 16px;
-  margin-top: 88px;
-  width: 238px;
   opacity: 0.67;
   color: #1d0046;
 }
@@ -715,27 +717,16 @@ img {
           flex-direction: column;
 }
 
-.container-main .deploy-strategies {
-  margin: 4rem 2rem;
-}
-
-.container-main .beyond-billing .content-container {
-  margin: 5rem 2.5rem;
-}
-
 .container-main .beyond-billing .content-title {
-  width: 79%;
   font-family: "SF Pro Bold";
 }
 
-.container-main .beyond-billing .content-description {
-  width: 91%;
+.container-main .testimonials {
+  font-family: "IBM Plex Sans", sans-serif;
 }
 
-.container-main .testimonials {
-  width: 95%;
-  margin: auto 0.8rem;
-  font-family: "IBM Plex Sans", sans-serif;
+.container-main .testimonials .quote {
+  display: none;
 }
 
 .container-main .testimonials ul {
@@ -763,19 +754,21 @@ img {
   border-bottom: 2px solid;
 }
 
+.container-main .testimonials .tab-content {
+  margin-top: 3rem;
+}
+
 .container-main .testimonials .testimonial-content {
   -webkit-box-shadow: 0px 2px 18px -4px #7271718c;
           box-shadow: 0px 2px 18px -4px #7271718c;
   border-radius: 8px;
   padding: 3rem 1.5em;
-  margin-top: 3rem;
 }
 
 .container-main .testimonials .testimonial-content .testimonial-message h1 {
   color: #5c07d1;
   font-weight: 600;
   letter-spacing: -1px;
-  width: 65%;
 }
 
 .container-main .testimonials .testimonial-content .testimonial-message h2 {
@@ -783,13 +776,10 @@ img {
   font-weight: 400;
   font-size: 1.3rem;
   color: #64648c;
-  width: 93%;
-  margin-top: 1.5rem;
 }
 
-.container-main .testimonials .testimonial-content .testimonial-message h3 {
+.container-main .testimonials .testimonial-content .testimonial-message a {
   font-size: 1.2rem;
-  margin-top: 2rem;
 }
 
 .container-main .testimonials .testimonial-content .testimonial-image h3 {
@@ -799,23 +789,11 @@ img {
   padding-top: 1rem;
 }
 
-.container-main .modern-cfo {
-  margin: 9rem 3rem;
-}
-
-.container-main .modern-cfo .title {
-  margin-bottom: 3rem;
-}
-
-.container-main .modern-cfo .title h1 {
+.container-main .modern-cfo h1 {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 600;
   font-size: 36px;
   letter-spacing: -0.64px;
-}
-
-.container-main .modern-cfo .container {
-  width: 100%;
 }
 
 .container-main .modern-cfo .container h3 {
@@ -826,14 +804,14 @@ img {
   letter-spacing: -0.5px;
 }
 
-.container-main .modern-cfo .container h5 {
+.container-main .modern-cfo .container a {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
 }
 
-.container-main .modern-cfo .container h5.pricing-text {
+.container-main .modern-cfo .container a.pricing-text {
   font-weight: 600;
 }
 
@@ -848,7 +826,6 @@ img {
 
 .container-main .content-container {
   font-family: "IBM Plex Sans", sans-serif;
-  width: 89%;
 }
 
 .container-main .content-container .content-title {
@@ -857,7 +834,6 @@ img {
   font-size: 33px;
   line-height: 44px;
   padding-top: 9px;
-  width: 264px;
   letter-spacing: -0.64px;
 }
 
@@ -867,14 +843,9 @@ img {
   font-size: 16px;
   line-height: 24px;
   color: #64648c;
-  margin-top: 2rem;
-  width: 261px;
 }
 
 @media screen and (min-width: 450px) {
-  .container-main {
-    width: 100%;
-  }
   .container-main .bg-image {
     height: 135vh;
     background-repeat: no-repeat;
@@ -882,24 +853,14 @@ img {
     background-position: right;
     background-size: 92%;
   }
-  .container-main .bg-image .main .sub-title {
-    width: 39%;
+  .container-main .bg-image .nav-bar {
+    margin: 3.5rem 5.5rem 0;
   }
-  .container-main .bg-image .main .description {
-    width: 58%;
+  .container-main .bg-image .main {
+    width: 44%;
   }
-  .container-main .content-container .content-description {
-    width: 74%;
-  }
-  .container-main .deploy-strategies {
-    margin: 30% 3rem 3rem;
-  }
-  .container-main .testimonials {
-    width: 85%;
-    margin: auto;
-  }
-  .container-main .modern-cfo {
-    margin: 9rem 3rem 4rem;
+  .container-main .testimonials .quote {
+    display: none;
   }
 }
 
@@ -907,12 +868,12 @@ img {
   a {
     padding-right: 1.8rem;
   }
+  .container-main main {
+    margin-top: 3rem;
+  }
   .container-main .bg-image {
     height: 139.5vh;
     background-size: 92%;
-  }
-  .container-main .bg-image section {
-    margin: 5.3rem 6rem 0 148px;
   }
   .container-main .bg-image .main h1,
   .container-main .bg-image .main .sub-title {
@@ -922,20 +883,15 @@ img {
     line-height: 54px;
     letter-spacing: -1px;
     text-align: left;
-    margin-top: 9%;
-    width: 387px;
-  }
-  .container-main .bg-image .main .sub-title {
-    width: 460px;
-    margin-top: 0px;
   }
   .container-main .bg-image .main .description {
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
     font-size: 18px;
     line-height: 27px;
-    margin-top: 34px;
-    width: 417px;
+  }
+  .container-main .bg-image .leading-brands {
+    margin-top: 5rem;
   }
   .container-main .bg-image .leading-brands .brand-icons {
     display: -webkit-box;
@@ -944,10 +900,6 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    margin-top: 34.6px;
-  }
-  .container-main .bg-image .leading-brands .brand-icons img {
-    margin-right: 43.11px;
   }
   .container-main .bg-image .leading-brands .brand-icons .goop {
     width: 64.66px;
@@ -957,9 +909,6 @@ img {
   }
   .container-main .bg-image .leading-brands .brand-icons .freshworks {
     width: 129.32px;
-  }
-  .container-main .content-container {
-    margin-left: 148px;
   }
   .container-main .content-container .content-title {
     font-size: 36px;
@@ -972,22 +921,28 @@ img {
             flex-direction: row;
   }
   .container-main .deploy-strategies {
-    margin: 256px 0 172px;
     overflow-x: clip;
+    margin-top: 5rem;
   }
+}
+
+@media screen and (min-width: 1024px) and (min-width: 900px) and (max-width: 1024px) {
+  .container-main .deploy-strategies {
+    margin-top: 30% !important;
+  }
+}
+
+@media screen and (min-width: 1024px) {
   .container-main .deploy-strategies .content-container {
     position: absolute;
     z-index: 1;
-    width: 28%;
-  }
-  .container-main .deploy-strategies .content-description {
-    width: 326px;
+    width: 25%;
+    margin-left: 5rem;
   }
   .container-main .beyond-billing {
-    margin: 0 0 0 159px;
+    margin-top: 5rem;
   }
   .container-main .beyond-billing .content-container {
-    margin: 0;
     width: 29%;
   }
   .container-main .beyond-billing .content-title {
@@ -1004,33 +959,44 @@ img {
     width: 256px;
   }
   .container-main .testimonials {
-    margin: 153px auto;
+    margin-top: 5rem;
   }
   .container-main .testimonials .tab-content {
+    margin: auto;
+    padding-top: 4rem;
     height: 347px;
     width: 858px;
-    margin: auto;
+  }
+  .container-main .testimonials .quote {
+    display: block;
+    position: relative;
+    top: 6rem;
+    right: 4rem;
+    border: none;
+    width: 55px;
+    padding: 16px;
+    height: 44px;
+    color: #fff;
+    background-color: #5c07d1;
+    text-align: center;
+    border-radius: 30px;
   }
   .container-main .testimonials .testimonial-content {
     padding: 3rem 7rem;
-    margin: 3rem auto;
   }
   .container-main .testimonials .testimonial-content .testimonial-message h1 {
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 800;
     font-size: 32px;
     line-height: 1.26;
-    width: 65%;
   }
   .container-main .testimonials .testimonial-content .testimonial-message h2 {
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
     font-size: 18px;
     line-height: 1.55;
-    width: 523px;
-    margin-top: 1.5rem;
   }
-  .container-main .testimonials .testimonial-content .testimonial-message h3 {
+  .container-main .testimonials .testimonial-content .testimonial-message a {
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 600;
     font-size: 16px;
@@ -1045,7 +1011,7 @@ img {
     padding-top: 1rem;
   }
   .container-main .modern-cfo {
-    margin: 0 164px;
+    margin-top: 5rem;
   }
   .container-main .modern-cfo .title h1 {
     font-family: "IBM Plex Sans", sans-serif;
