--- a/styles/style.scss
+++ b/styles/style.scss
@@ -380,7 +380,7 @@ img {
       margin-top: 3rem;
     }
 
-    .container-fluid{
+    section.container-fluid{
         padding: 2.5rem 0 2.5rem 2.5rem;
     }
 
