--- a/styles/components/_scrollspy.scss
+++ b/styles/components/_scrollspy.scss
@@ -128,6 +128,8 @@
 
           .selected-image {
             margin-top: 3rem;
+            width: 179%;
+
           }
 
           .selected-description {
