Landing screen assignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -897,6 +897,7 @@ img {
     font-weight: 400;
     font-size: 18px;
     line-height: 27px;
+    margin-top: 3rem;
   }
   .container-main .bg-image .leading-brands {
     margin-top: 5rem;
